[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypi-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for PyPI package queries"
dependencies = [
  "httpx>=0.24.0",
  "beautifulsoup4>=4.12.0",
  "python-multipart>=0.0.6",
  "typing-extensions>=4.5.0",
  "logging>=0.4.9.6"
  "mcp"
]

[tool.setuptools]
py-modules = ["pypi_server"]